--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     --text-color: #595959;
     --text-date : #A8A8A8;
     --a-side-text-color: #FFFFFF;
-    --a-side-backgraund: #1E2939;
+    --a-side-backgraund: #1F340D;
     --list-background: #FFFFFF;
     --resume-background:#F5F7FA;
     --background-color: #E5E5E5;
@@ -35,9 +35,9 @@ img {
     list-style: none;
 }
 
-.link {
+/* .link {
     text-decoration: none;
-}
+} */
 
 body {
     font-family: Montserrat, Raleway;
@@ -94,36 +94,6 @@ body {
     margin-right: 17px;
 }
 
-.social-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-}
-
-.social-list-link {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: var(--resume-background);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon{
-    fill: var(--akcent-color)
-
-}
-
-.social-list-icon {
-    margin: 0 auto;
-    display: block;
-    fill: var(--a-side-backgraund)
-}
-
 .aside-secondary-heder {
     color: var(--a-side-text-color);
     margin-bottom: 8px;
@@ -131,23 +101,9 @@ body {
 
 .about,
 .skills,
-.int,
 .lang {
     padding-left: 30px;
     padding-right: 9px;
-}
-
-.table-th {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.71;
-    text-align: start;
-}
-
-.table-td {
-    font-weight: 400;
-    opacity: 0.5;
-   
 }
 
 .adress-link {
@@ -160,15 +116,14 @@ body {
     color: var(--akcent-color);
 }
 
+.about-list,
 .skills-list,
-.int-list,
 .lang-list {
     font-size: 14px;
     line-height: 1.71;
 }
 
 .skills-item::before,
-.int-item::before,
 .lang-item::before{
     color: var(--akcent-color);
     /* Цвет маркера */
@@ -184,17 +139,25 @@ body {
 /*----right part----*/
 
 .section {
-    padding-top: 8px;
-    padding-left: 48px;
-    padding-right: 48px;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.hero-section,
+.project-section,
+.work-section,
+.education-section {
+    margin-bottom: 30px;
 }
 
 /*----hero-section----*/
 
 .bold-text{
     font-weight: 700;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 1.21;
+    margin-top: 15px;
     margin-bottom: 19px;
 }
 
@@ -248,7 +211,7 @@ body {
 
 .university-name {
     display: block;
-    max-width: 410px;
+    max-width: 350px;
     color: var(--akcent-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -258,15 +221,18 @@ body {
     color: #cc8460;
 }
 
-.courses-item{
-    margin-bottom: 5px;
+.project-list,
+.education-list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
-.courses-name {  
+/* .project-name {  
     margin-bottom: auto;
-}
+} */
 
-.company-name {
+.project-name {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.25;
@@ -274,11 +240,7 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.company-name:hover,
-.company-name:focus {
+.project-name:hover,
+.progect-name:focus {
     color: #cc8460;
-}
-
-.date-text-curses {
-    margin-bottom: auto;
 }
