--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,8 @@ img {
 body {
     font-family: Montserrat, Raleway;
     background-color: var(--background-color);
+    width: 2480px;
+    height: 3508px;
 }
 
 .main-conteiner{
