--- a/css/main.css
+++ b/css/main.css
@@ -1,137 +1,141 @@
 :root {
-    --head-tekst-color: #000000;
-    --akcent-color: #FB6D3A;
-    --text-color: #595959;
-    --text-date : #A8A8A8;
-    --a-side-text-color: #FFFFFF;
-    --a-side-backgraund: #1F340D;
-    --list-background: #FFFFFF;
-    --resume-background:#F5F7FA;
-    --background-color: #E5E5E5;
+  --head-tekst-color: #000000;
+  --akcent-color: #fb6d3a;
+  --text-color: #595959;
+  --text-date: #a8a8a8;
+  --a-side-text-color: #ffffff;
+  --a-side-backgraund: #1f340d;
+  --list-background: #ffffff;
+  --resume-background: #f5f7fa;
+  --background-color: #e5e5e5;
 }
-
 
 h1,
 h2,
 h3,
 h4,
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 ol,
 ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 /* .link {
-    text-decoration: none;
+  text-decoration: none;
 } */
 
 body {
-    font-family: Montserrat, Raleway;
-    background-color: var(--background-color);
+  font-family: Montserrat, Raleway;
+  background-color: var(--background-color);
 }
 
-.main-conteiner{
-    width: 1280px;
-    height: 1400px;
-    margin: auto;
-    background-color: var(--resume-background);
-    padding: 14px 61px 56px 29px;
+.main-conteiner {
+  width: 1250px;
+  /* height: 1400px; */
+  margin: auto;
+  background-color: var(--resume-background);
+  padding: 15px 30px 45px 20px;
 }
 
 /*----components----*/
 
 .secondary-heder {
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 1.23;
-    color: var(--head-tekst-color);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.23;
+  color: var(--head-tekst-color);
 }
 
 .third-header {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.25;
-    color: var(--head-tekst-color);
-    margin-bottom: 11px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.25;
+  color: var(--head-tekst-color);
+  margin-bottom: 11px;
 }
 
 /*---container----*/
 
 .conteiner {
-   display: flex;
-    width: 1200px;
-    height: 1319px;
-    background-color: var(--list-background);
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  width: 1180px;
+  background-color: var(--list-background);
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 /*----aside----*/
 
 .aside {
-    display: flex;
-    flex-direction: column;
-    gap: 29px;
-    background-color: var(--a-side-backgraund);
-    width: 370px;
-    height: 100%;
-    padding-top: 66px;
-    color: var(--a-side-text-color);
-    margin-left: 11px;
-    margin-right: 17px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: var(--a-side-backgraund);
+  width: 370px;
+  padding-top: 65px;
+  color: var(--a-side-text-color);
+  margin-left: 15px;
+  margin-right: 20px;
+}
+
+.img-wrap {
+  width: 370px;
+}
+
+.foto-img {
+  width: 100%;
 }
 
 .aside-secondary-heder {
-    color: var(--a-side-text-color);
-    margin-bottom: 8px;
+  color: var(--a-side-text-color);
+  margin-bottom: 8px;
 }
 
 .about,
 .skills,
 .lang {
-    padding-left: 30px;
-    padding-right: 9px;
+  padding-left: 30px;
+  padding-right: 9px;
 }
 
 .adress-link {
-    color: inherit;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: inherit;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-link:hover,
 .adress-link:focus {
-    color: var(--akcent-color);
+  color: var(--akcent-color);
 }
 
 .about-list,
 .skills-list,
 .lang-list {
-    font-size: 14px;
-    line-height: 1.71;
+  font-size: 18px;
+  line-height: 1.71;
 }
 
 .skills-item::before,
-.lang-item::before{
-    color: var(--akcent-color);
-    /* Цвет маркера */
-    content: "▪";
-    /* Сам маркер */
-    padding-right: 10px;
-    /* Расстояние от маркера до текста */
-    
+.lang-item::before {
+  color: var(--akcent-color);
+  /* Цвет маркера */
+  content: "▪";
+  /* Сам маркер */
+  padding-right: 10px;
+  /* Расстояние от маркера до текста */
 }
 
 /*----/aside----*/
@@ -139,93 +143,94 @@ body {
 /*----right part----*/
 
 .section {
-    padding-top: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-right: 50px;
+  padding-bottom: 53px;
 }
 
 .hero-section,
 .project-section,
 .work-section,
 .education-section {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 /*----hero-section----*/
 
-.bold-text{
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.21;
-    margin-top: 15px;
-    margin-bottom: 19px;
+.bold-text {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.21;
+  margin-top: 15px;
+  margin-bottom: 25px;
 }
 
 .hero-name {
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 1.22;
-    margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 1.22;
+  margin-bottom: 24px;
 }
 
 .text {
-    font-size: 14px;
-    line-height: 1.71;
-    color: var(--text-color);
+  font-size: 18px;
+  line-height: 1.71;
+  color: var(--text-color);
 }
 
 .hero-text {
-    margin-bottom: 24px;
+  margin-bottom: 30px;
 }
 
 .right-header {
-    margin-bottom: 8px;
+  margin-bottom: 15px;
 }
 
 .akcent-color {
-    color: var(--akcent-color);
+  color: var(--akcent-color);
 }
 
 .date-text {
-    font-size: 12px;
-    line-height: 1.25;
-    color: var(--text-date);
-    margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--text-date);
+  margin-bottom: 8px;
 }
 
 .responsibilities-list {
-    list-style-type: disc;
+  list-style-type: disc;
 }
 
 .responsibilities-list,
 .university-list {
-    margin-bottom: 27px;
+  margin-bottom: 27px;
 }
 
 .responsibilities-item {
-    font-size: 14px;
-    line-height: 1.71;
-    color: var(--text-color);
-    margin-left: 20px;
+  font-size: 18px;
+  line-height: 1.71;
+  color: var(--text-color);
+  margin-left: 20px;
 }
 
 .university-name {
-    display: block;
-    max-width: 350px;
-    color: var(--akcent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  max-width: 350px;
+  color: var(--akcent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .university-name:hover,
 .university-name:focus {
-    color: #cc8460;
+  color: #cc8460;
 }
 
 .project-list,
 .education-list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 /* .project-name {  
@@ -233,14 +238,14 @@ body {
 } */
 
 .project-name {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.25;
-    color: var(--akcent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.25;
+  color: var(--akcent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-name:hover,
 .progect-name:focus {
-    color: #cc8460;
+  color: #cc8460;
 }
