--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,9 @@ img {
   list-style: none;
 }
 
-/* .link {
+.link {
   text-decoration: none;
-} */
+}
 
 body {
   font-family: Montserrat, Raleway;
