--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   --text-color: #595959;
   --text-date: #a8a8a8;
   --a-side-text-color: #ffffff;
-  --a-side-backgraund: #1f340d;
+  --a-side-backgraund: #3a3a3a;
   --list-background: #ffffff;
   --resume-background: #f5f7fa;
   --background-color: #e5e5e5;
