--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,10 @@
   --text-color: #595959;
   --text-date: #a8a8a8;
   --a-side-text-color: #ffffff;
-  --a-side-backgraund: #3a3a3a;
-  --list-background: #ffffff;
+  --a-side-backgraund: rgb(58, 58, 58);
+  --list-background: rgb(255, 255, 255);
   --resume-background: #f5f7fa;
-  --background-color: #e5e5e5;
+  --background-color: rgb(229, 229, 229);
 }
 
 h1,
@@ -153,7 +153,7 @@ body {
 .project-section,
 .work-section,
 .education-section {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 /*----hero-section----*/
@@ -162,15 +162,15 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 1.21;
-  margin-top: 15px;
-  margin-bottom: 25px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .hero-name {
   font-weight: 700;
   font-size: 45px;
   line-height: 1.22;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 
 .text {
@@ -180,7 +180,7 @@ body {
 }
 
 .hero-text {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 .right-header {
@@ -204,7 +204,7 @@ body {
 
 .responsibilities-list,
 .university-list {
-  margin-bottom: 27px;
+  margin-bottom: 18px;
 }
 
 .responsibilities-item {
@@ -216,7 +216,7 @@ body {
 
 .university-name {
   display: block;
-  max-width: 400px;
+  max-width: 450px;
   color: var(--akcent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -230,7 +230,7 @@ body {
 .education-list {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 
 /* .project-name {  
